# SberGames-FileBase-

./: README.md
Client/: CMakeLists.txt  client.c
Server/: CMakeLists.txt  clientsQueue.c  clientsQueue.h  server.c  workWithFiles.c  workWithFiles.h
Server/test/: testServer.py
